<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_can_t_be_blank">Username can\'t be blank</string>
    <string name="password_can_t_be_blank">Password can\'t be blank</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign-up now!</string>
</resources>