<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:animateLayoutChanges="true"
            tools:context=".presentation.LoginFragment">

            <TextView
                android:id="@+id/loginLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:text="@string/username"
                android:textColor="?attr/colorOnSurface"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_0_5"
                android:layout_marginEnd="@dimen/grid_3"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="@dimen/grid_2"
                app:layout_constraintTop_toBottomOf="@id/loginLabel" />

            <TextView
                android:id="@+id/loginError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:text="@string/username_can_t_be_blank"
                android:textColor="?attr/colorError"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginEditText" />

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_1_5"
                android:layout_marginEnd="@dimen/grid_3"
                android:text="@string/password"
                android:textColor="?attr/colorOnSurface"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginError" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_0_5"
                android:layout_marginEnd="@dimen/grid_3"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/grid_2"
                app:layout_constraintTop_toBottomOf="@id/passwordLabel" />

            <TextView
                android:id="@+id/passwordError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:text="@string/password_can_t_be_blank"
                android:textColor="?attr/colorError"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:text="@string/login"
                app:layout_constraintTop_toBottomOf="@id/passwordError" />

            <TextView
                android:id="@+id/btn_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_3"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="@dimen/grid_2"
                android:paddingVertical="@dimen/grid_1"
                android:paddingTop="@dimen/grid_1_5"
                android:paddingBottom="@dimen/grid_1_5"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginButton" />

            <TextView
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="@dimen/grid_2"
                android:paddingVertical="@dimen/grid_1"
                android:paddingTop="@dimen/grid_1_5"
                android:paddingBottom="@dimen/grid_1_5"
                android:text="@string/don_t_have_an_account_sign_up_now"
                app:layout_constraintEnd_toEndOf="@+id/btn_forgot"
                app:layout_constraintStart_toStartOf="@+id/btn_forgot"
                app:layout_constraintTop_toBottomOf="@+id/btn_forgot" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
